Add arbitrary command type